# happyschool

./: .coveragerc  .eslintrc.js  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.md  Pipfile  README.md  babel.config.js  daphne.sh  docker-compose.yml  eslint.config.js  manage.py  package.json  pyproject.toml  python_dep.txt  requirements.txt  vite.config.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.github/: dependabot.yml
.github/workflows/: django.yml
Script/: Migration.sh  migration.desktop  migration.sh  migration_exec.desktop
absence_prof/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
annuaire/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
appels/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
appyschool/: asgi.py  bindings.py  routing.py  settings.example.py  urls.py  wsgi.py
assets/: menu.vue
core/: admin.py  apps.py  consumers.py  email.py  installed_apps.py  ldap.py  models.py  people.py  permissions.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  utilities.py  views.py
docs/: conf.py  configuration.md  developpement.md  index.rst  installation.md  requirements.txt  utilisation.md
dossier_eleve/: admin.py  apps.py  forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
happyschool/: asgi.py  bindings.py  celery.py  routing.py  settings.example.py  urls.py
infirmerie/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
lateness/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
mail_answer/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
mail_notification/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
myapp/: consumers.py  views.py
pia/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
proeco/: admin.py  models.py  tasks.py  views.py
schedule_change/: admin.py  apps.py  bindings.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  views.py
scripts/: restart.sh  update.sh
student_absence/: admin.py  apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
student_absence_teacher/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+707 files in other folders)
