[project]
name = "HappySchool"
version = "0.2.0"
description = "A webplatform for school management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery==5.5.3",
    "channels==4.2.2",
    "channels-redis==4.2.1",
    "daphne==4.1.2",
    "Django==5.2.7",
    "django-auth-ldap>=5.1.0",
    "django-cas-ng>=5.0.1",
    "django-filter==25.1",
    "django-weasyprint==2.2.2",
    "djangorestframework>=3.16.1",
    "icalendar>=6.1.1",
    "ldap3>=2.9.1",
    "psycopg2-binary>=2.9.10",
    "pydyf==0.10.0",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-escpos>=3.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "social-auth-app-django>=5.4.3",
    "unidecode>=1.3.8",
    "weasyprint==58.1",
    "xlsxwriter>=3.2.2",
    "xlwt>=1.3.0",
    "django-hijack>=3.7.4",
]

[tool.black]
line-length = 100
extend-exclude = "migrations/.*py"

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "django-vite-plugin>=4.1.0",
    "coverage>=7.6.12",
    "ipython>=8.32.0",
    "ruff>=0.9.6",
    "black>=25.1.0",
    "sphinx>=8.2.3",
    "seleniumbase>=4.34.15",
    "sphinx-rtd-theme>=3.0.2",
]
